# Bindiff

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/analysis/: cfg.rs  hash.rs  mod.rs
crates/core/src/arch/: mod.rs  x86_64.rs
crates/core/src/diff/: matching.rs  mod.rs  report.rs
crates/core/src/loader/: mod.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
