[workspace]
members = [ "crates/core", "crates/cli", "crates/report" ]
resolver = "2"

[workspace.package]
edition = "2025"
license = "MIT"
authors = ["kernelstub"]
repository = "https://github.com/kernelstub/Bindiff"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
petgraph = "0.6"
blake3 = "1.5"
similar = "2.6"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
goblin = "0.9"
yaxpeax-arch = "0.2"
yaxpeax-x86 = "1.0"
bitvec = "1.0"
memmap2 = "0.9"
